# UnC

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/uno/: Uno.cpp
src/core/uno/cards/: Card.cpp  CardDeck.cpp  Color.cpp  Number.cpp  SkipTurn.cpp
src/core/uno/cards/include/: Card.hpp  CardDeck.hpp  Color.hpp  Number.hpp  SkipTurn.hpp
src/core/uno/factories/: CardDeckFactory.cpp
src/core/uno/factories/include/: CardDeckFactory.hpp
src/core/uno/include/: Uno.hpp
src/core/uno/utils/: EnhancedList.cpp  Stack.cpp
src/core/uno/utils/include/: EnhancedList.hpp  Stack.hpp
tests/: MainTest.cpp  TestCard.cpp
tests/include/: MainTest.hpp  TestCard.hpp
